--- a/testing/Dockerfile
+++ b/testing/Dockerfile
@@ -2,6 +2,5 @@ FROM lambci/lambda:build-nodejs12.x as build-env
 
 FROM nginx:latest
 
-COPY --from=build-env static /static
-
+COPY --from=build-env /app/build /app/build
 
