--- a/testing/Dockerfile
+++ b/testing/Dockerfile
@@ -1,6 +1,10 @@
 FROM lambci/lambda:build-nodejs12.x as build-env
 
+WORKDIR /app
+
 FROM nginx:latest
+
+WORKDIR /app
 
 COPY --from=build-env /app/build /app/build
 
