--- a/testing/Dockerfile
+++ b/testing/Dockerfile
@@ -2,7 +2,7 @@ FROM lambci/lambda:build-nodejs12.x as build-env
 
 WORKDIR /app
 
-COPY web /app/web
+COPY k8s-wordsmith-demo/web /app/web
 
 FROM nginx:latest
 
