--- a/testing/Dockerfile
+++ b/testing/Dockerfile
@@ -1,8 +1,10 @@
-FROM lambci/lambda:build-nodejs12.x as build-env
+FROM lambci/lambda:build-nodejs12.x as test-env
 
 COPY /web /app/web
 
 WORKDIR /app
+
+FROM test-env as build-env
 
 FROM nginx:latest
 
