--- a/testing/Dockerfile
+++ b/testing/Dockerfile
@@ -6,6 +6,10 @@ WORKDIR /app
 
 FROM test-env as build-env
 
+RUN npm run build -S
+
+RUN npm prune --production -S
+
 FROM nginx:latest
 
 WORKDIR /app
